# vending-haskell

./: README.md  vendingmachine.cabal
src/: Money.hs  VendingMachine.hs
test/: doctests.hs
